SM-000: fix gap bug

--- a/src/frontend/source/components/office-modal/stylesheet/_components.office-modal.scss
+++ b/src/frontend/source/components/office-modal/stylesheet/_components.office-modal.scss
@@ -25,6 +25,7 @@
 
   div {
     @include rich-text;
+    gap: 0;
   }
 
   a {
